--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "single-spa-preact",
   "version": "1.1.0",
   "description": "A single spa plugin for Preact apps",
-  "main": "lib/single-spa-preact.js",
+  "main": "src/single-spa-solid.js",
   "scripts": {
     "prepublishOnly": "yarn build",
     "lint": "eslint src",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/single-spa/single-spa-preact.git"
+    "url": "git+https://github.com/nduartech/single-spa-solid.git"
   },
   "husky": {
     "hooks": {
@@ -31,12 +31,12 @@
     "lib",
     "src"
   ],
-  "author": "Kent McLean",
+  "author": "Nathan Duarte",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/single-spa/single-spa-preact/issues"
+    "url": "https://github.com/nduartech/single-spa-solid/issues"
   },
-  "homepage": "https://github.com/single-spa/single-spa-preact#readme",
+  "homepage": "https://github.com/nduartech/single-spa-solid#readme",
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
