--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-spa-preact",
   "version": "1.1.0",
-  "description": "A single spa plugin for Preact apps",
+  "description": "A single spa plugin for SolidJS apps",
   "main": "src/single-spa-solid.js",
   "scripts": {
     "prepublishOnly": "yarn build",
