--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
   "homepage": "https://github.com/nduartech/single-spa-solid#readme",
   "devDependencies": {
     "solid-js": "^1.6.10",
-    "typescript": "^5.4.5"
-  },
-  "dependencies": {
+    "typescript": "^5.4.5",
     "@types/node": "^20.12.11"
   }
 }
