--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@nathanld/single-spa-solid",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A single spa plugin for SolidJS apps",
-  "main": "dist/single-spa-solid.js",
+  "main": "lib/single-spa-solid.js",
   "scripts": {
-    "build": "tsc src/single-spa-solid.tsx --outDir dist"
+    "prepublishOnly": "yarn build",
+    "build": "rimraf lib && babel dist --out-dir lib --source-maps"
   },
   "repository": {
     "type": "git",
@@ -29,8 +30,19 @@
   },
   "homepage": "https://github.com/nduartech/single-spa-solid#readme",
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/eslint-parser": "^7.11.3",
+    "@babel/preset-env": "^7.11.0",
+    "@types/node": "^20.12.11",
+    "eslint": "^7.7.0",
+    "eslint-config-important-stuff": "^1.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.2.5",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1",
+    "rimraf": "^3.0.2",
     "solid-js": "^1.6.10",
-    "typescript": "^5.4.5",
-    "@types/node": "^20.12.11"
+    "typescript": "^5.4.5"
   }
 }
