--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@nathanld/single-spa-solid",
-  "version": "0.1.2",
+  "version": "0.1.5",
   "description": "A single spa plugin for SolidJS apps",
   "main": "lib/single-spa-solid.js",
   "scripts": {
     "prepublishOnly": "yarn build",
-    "build": "rimraf lib && babel src --out-dir lib --source-maps"
+    "build": "rimraf lib && babel dist --out-dir lib --source-maps"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,7 @@
     "solid-js"
   ],
   "files": [
-    "src"
+    "lib"
   ],
   "author": "Nathan Duarte",
   "license": "MIT",
@@ -42,6 +42,7 @@
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "rimraf": "^3.0.2",
-    "solid-js": "^1.6.10"
+    "solid-js": "^1.6.10",
+    "typescript": "^5.4.5"
   }
 }
